# EPICPath

./: Cargo.toml  LICENSE  README.md  Shuttle.toml
content/concepts/: beaker-ap.md  beaker.md  epic-modules.md  epic-overview.md  hyperspace.md  inbasket.md  mychart.md  navigator.md  orders.md  results.md  smartphrases.md
content/paths/: new-pathology-resident.yaml
content/quizzes/: beaker-basics.yaml  epic-fundamentals.yaml
content/workflows/: accessioning-specimen.yaml  chart-review-results.yaml  signing-out-case.yaml
src/: main.rs
src/api/: content.rs
src/models/: concept.rs  mod.rs  path.rs  quiz.rs  workflow.rs
src/progress/: mod.rs
src/views/: layout.rs  pages.rs
static/css/: style.css
