[package]
name = "epicpath"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower-http = { version = "0.6", features = ["fs", "cors"] }
pulldown-cmark = "0.12"
maud = { version = "0.27", features = ["axum"] }
